<resources>
    <string name="app_name">AuctionApplication</string>

    <!-- Nav Drawer or Menu title -->
    <string name="stuff_list_string">Daftar Barang</string>
    <string name="officer_list_string">Daftar Petugas</string>
    <string name="category_list">Daftar Kategori</string>
    <string name="update_data_text">Ubah Data</string>
    <string name="create_data_text">Tambah Data</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="category_list_string">Kategori Barang</string>

    <string name="display_price">Rp.%d</string>

    <!-- Sign In utilities text -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="empty_username">Username tidak boleh kosong..!</string>
    <string name="empty_password">Password tidak boleh kosong..!</string>

    <!-- Create Update utilities text -->
    <string name="category_name_hint">Nama Kategori</string>
    <string name="category_description_hint">Deskripsi Kategori</string>
    <string name="create_text">Buat</string>
    <string name="update_text">Ubah</string>
    <string name="must_filled_field">Field ini harus di isi…!!!</string>
    <string name="phone">No. Telepon</string>
    <string name="officer_status">Status</string>
    <string name="officer_level_hint">Level</string>
    <string name="officer_name_hint">Nama Petugas</string>
    <string name="stuff_name_hint">Nama Barang</string>
    <string name="stuff_category_hint">Katergori Barang</string>
    <string name="stuff_price_hint">Harga Barang</string>
    <string name="stuff_description_hint">Deskripsi Barang</string>
    <string name="stuff_price_suffix">Rp.</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="loading_text">Mohon Tunggu...</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="reload_text">Muat Ulang</string>
    <string name="cto_text">Kayanya belum dapet respon dari server nih...</string>
    <string name="no_connection_text">kayanya lagi ga bisa nyambung ke server nih...</string>
    <string name="requset_failed_message">Tidak ada respon dari server</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
