<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/dashboardFragment">
    <fragment
        android:id="@+id/stuffFragment"
        android:name="com.production.auctionapplication.feature.stuff.StuffFragment"
        android:label="@string/stuff_list_string"
        tools:layout="@layout/fragment_stuff" >
        <action
            android:id="@+id/action_stuffFragment_to_createUpdateStuffFragment"
            app:destination="@id/createUpdateStuffFragment" />
        <action
            android:id="@+id/action_stuffFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment" />
    </fragment>
    <fragment
        android:id="@+id/officerFragment"
        android:name="com.production.auctionapplication.feature.administrator.officer.OfficerFragment"
        android:label="@string/officer_list_string"
        tools:layout="@layout/fragment_officer" >
        <action
            android:id="@+id/action_officerFragment_to_createUpdateOfficerFragment"
            app:destination="@id/createUpdateOfficerFragment" />
        <action
            android:id="@+id/action_officerFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment" />
    </fragment>
    <fragment
        android:id="@+id/stuffCategoryFragment"
        android:name="com.production.auctionapplication.feature.stuffcategory.StuffCategoryFragment"
        android:label="@string/category_list_string"
        tools:layout="@layout/fragment_stuff_category" >
        <argument
            android:name="message"
            app:argType="string"
            app:nullable="true"/>
        <action
            android:id="@+id/action_stuffCategoryFragment_to_createUpdateStuffCategoryFragment"
            app:destination="@id/createUpdateStuffCategoryFragment" />
        <action
            android:id="@+id/action_stuffCategoryFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment" />
    </fragment>
    <fragment
        android:id="@+id/createUpdateStuffCategoryFragment"
        android:name="com.production.auctionapplication.feature.stuffcategory.createupdate.CreateUpdateStuffCategoryFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_create_update_stuff_category">
        <argument
            android:name="title"
            app:argType="string"
            app:nullable="false"/>
        <argument
            android:name="category"
            app:argType="com.production.auctionapplication.repository.networking.models.category.CategoryResponse"
            app:nullable="true" />
        <action
            android:id="@+id/action_createUpdateStuffCategoryFragment_to_stuffCategoryFragment"
            app:destination="@id/stuffCategoryFragment"
            app:launchSingleTop="true"
            app:popUpToInclusive="true"
            app:popUpTo="@id/stuffCategoryFragment"/>
    </fragment>
    <fragment
        android:id="@+id/createUpdateOfficerFragment"
        android:name="com.production.auctionapplication.feature.administrator.officer.createupdate.CreateUpdateOfficerFragment"
        android:label="CreateUpdateOfficerFragment"
        tools:layout="@layout/fragment_create_update_officer">
        <argument
            android:name="title"
            app:argType="string"
            app:nullable="false"/>
        <argument
            android:name="officer"
            app:argType="com.production.auctionapplication.repository.networking.models.officer.OfficerResponse"
            app:nullable="true" />
        <action
            android:id="@+id/action_createUpdateOfficerFragment_to_officerFragment"
            app:destination="@id/officerFragment"
            app:launchSingleTop="true"
            app:popUpToInclusive="true"
            app:popUpTo="@id/officerFragment"/>
    </fragment>
    <fragment
        android:id="@+id/createUpdateStuffFragment"
        android:name="com.production.auctionapplication.feature.stuff.createupdate.CreateUpdateStuffFragment"
        android:label="CreateUpdateStuffFragment"
        tools:layout="@layout/fragment_create_update_stuff">
        <argument
            android:name="title"
            app:argType="string"
            app:nullable="false"/>
        <argument
            android:name="stuff"
            app:argType="com.production.auctionapplication.repository.networking.models.stuff.StuffResponse"
            app:nullable="true" />
        <action
            android:id="@+id/action_createUpdateStuffFragment_to_stuffFragment"
            app:destination="@id/stuffFragment"
            app:launchSingleTop="true"
            app:popUpToInclusive="true"
            app:popUpTo="@id/stuffFragment"/>
    </fragment>
    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.production.auctionapplication.feature.dashboard.DashboardFragment"
        android:label="@string/dashboard_title"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_dashboardFragment_to_stuffFragment"
            app:destination="@id/stuffFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_officerFragment"
            app:destination="@id/officerFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_stuffCategoryFragment"
            app:destination="@id/stuffCategoryFragment" />
    </fragment>
</navigation>